[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-iemocap-waves-over-words"
version = "0.1.0"
description = "Modularized Qwen2-Audio IEMOCAP experiment pipeline"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["qwen_iemocap"]
